<resources>
    <string name="app_name">go!Events</string>
    <string name="small_lorem_ipsum">Lorem Ipsum</string>
    <string name="map_button">Open Map</string>
    <string name="big_lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tempor volutpat nisi vel commodo. Quisque bibendum malesuada tellus, ac vehicula arcu sollicitudin non. Praesent mauris leo, maximus sed lectus tristique, aliquet porta est. Nunc dapibus mauris arcu, in fringilla ipsum bibendum vitae. In sodales sem odio, in dapibus risus viverra et. Suspendisse odio lectus, luctus sed sagittis non, facilisis nec nulla. Sed vel lorem lectus.
    </string>
    <string name="mid_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tempor volutpat nisi vel commodo. Quisque bibendum malesuada tellus,</string>
    <string name="map_event_button">Map</string>
    <string name="about_event_button">About</string>
    <string name="feed">feed</string>
    <string name="events">events</string>
    <string name="trade">trade</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="group_create">Create Group</string>
    <string name="group_join">Join Group</string>
    <string name="group_manage">Manage Groups</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join</string>
</resources>
