<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/i_feed"
        android:title="@string/feed"
        android:checked="true"
        android:icon="@drawable/ic_card_pokemon1">
    </item>


    <item
        android:id="@+id/i_event"
        android:title="@string/events"
        android:checked="false"
        android:icon="@drawable/ic_card_pokemon1">
    </item>

    <item
        android:id="@+id/i_trade"
        android:title="@string/trade"
        android:checked="false"
        android:icon="@drawable/ic_card_pokemon1">
    </item>

    <item
        android:id="@+id/i_profile"
        android:title="profile"
        android:checked="false"
        android:icon="@drawable/ic_card_pokemon1">
    </item>

</menu>