<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_eventitem"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_eventitem"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_card_pokemon1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical"
                android:paddingTop="5dp">
                <TextView
                    android:id="@+id/tv_eventtitle"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/small_lorem_ipsum"
                    android:textColor="#000"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/tv_eventbody"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="12sp"
                    android:text="@string/mid_lorem_ipsum"
                    android:textColor="#555" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="50dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_eventmap"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:textSize="8sp"
                    android:text="@string/map_event_button"/>

                <View
                    android:layout_width="5dp"
                    android:layout_height="wrap_content">

                </View>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_eventabout"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                    android:layout_width="75dp"
                    android:layout_height="40dp"
                    android:textSize="8sp"
                    android:text="@string/about_event_button"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>